# evtio

./: .clang-format  .gitignore  CMakeLists.txt  README.md  gen-linux-project.sh  gen-macos-project.sh  gen-windows-project.bat
example/: CMakeLists.txt  echo_tcp_client.cpp  echo_tcp_server.cpp  echo_udp_client.cpp  echo_udp_server.cpp
example/common/: log.cpp  parsearg.cpp  parsearg.hpp  udp_socket.cpp  udp_socket.hpp
include/: evtio.hpp
